add more publications, add teaching page, refactors

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -49,13 +49,17 @@
   "@type": "Person",
   "name": "Onno Kampman",
   "url": "https://onnokampman.com",
-  "image": "https://onnokampman.com/images/favicon_onno.webp?v=M44lzPylqQ",
+  "image": "https://onnokampman.com/images/onno_kampman.jpg",
   "sameAs": [
     "https://x.com/KampmanOnno",
     "https://www.linkedin.com/in/onnokampman/",
     "https://github.com/OnnoKampman",
+    "https://huggingface.co/OnnoKampman",
+    "https://scholar.google.com/citations?user=OnnoKampman",
+    "https://semanticscholar.org/author/OnnoKampman"
   ],
   "jobTitle": "AI Scientist",
+  "description": "Cognitive Scientist and AI Researcher",
   "worksFor": {
     "@type": "Organization",
     "name": "MOH Office for Healthcare Transformation"
