--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -80,7 +80,8 @@
     border-bottom: 1px solid mix(#fff, $link-color, 70%);
 
     &:hover {
-      text-decoration: underline;
+      color: $link-color-hover;
+      border-bottom-color: $link-color-hover;
 
       img {
         box-shadow: 0 0 10px rgba(#000, 0.25);
