update huggingface logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@ layout: compress
           <!-- <a href="https://orcid.org/{{ author.orcid }}"><i class="ai ai-orcid ai-fw ai-lg"></i></a> -->
           <a href="https://scholar.google.com/citations?user={{ author.googlescholar }}" target="_blank"><i class="ai ai-google-scholar ai-fw ai-lg"></i></a>
           <a href="https://semanticscholar.org/author/{{ author.semanticscholar }}" target="_blank"><i class="ai ai-semantic-scholar ai-fw ai-lg"></i></a>
-          <a href="https://huggingface.co/{{ author.huggingface }}" target="_blank"><i class="far fa-smile fa-fw fa-lg"></i></a>
+          <a href="https://huggingface.co/{{ author.huggingface }}" target="_blank"><i class="fab fa-hugging-face fa-fw fa-lg" aria-hidden="true"></i></a>
           <a href="https://github.com/{{ author.github }}" target="_blank"><i class="fab fa-fw fa-github fa-lg" aria-hidden="true"></i></a>
           <!-- <a href="https://goodreads.com/user/show/{{ author.goodreads }}"><i class="fab fa-fw fa-goodreads-g"></i></a> -->
           <!-- <a href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ base_path }}/feed.xml{% endif %}"><i class="fa fa-fw fa-rss-square" aria-hidden="true"></i></a> -->
