--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -25,10 +25,7 @@
 
 <link rel="stylesheet" href="{{ base_path }}/assets/css/academicons.css">
 
-<link href="{{ base_path }}/assets/css/fontawesome.css" rel="stylesheet">
-<link href="{{ base_path }}/assets/css/solid.css" rel="stylesheet">
-<link href="{{ base_path }}/assets/css/brands.css" rel="stylesheet">
-<link href="{{ base_path }}/assets/css/v5-font-face.css" rel="stylesheet">
+<link href="{{ base_path }}/assets/css/all.css" rel="stylesheet">
 
 <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); </script>
 <script type="text/x-mathjax-config">
